--- a/owfont-regular.css
+++ b/owfont-regular.css
@@ -1,5 +1,5 @@
 /*!
- *  owfont-regular 1.0.0 by Deniz Fuchidzhiev - http://websygen.com
+ *  owfont-regula1.0.0 by Deniz Fuchidzhiev - http://websygen.com
  *  License - font: SIL OFL 1.1, css: MIT License
  */
 /* FONT PATH
